--- a/DocMeeting/package.json
+++ b/DocMeeting/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^1.37.0",
     "@langchain/core": "^1.1.15",
     "@langchain/google-genai": "^2.1.10",
+    "@supabase/supabase-js": "^2.90.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^4.3.5",
