config(enviroment): TConfiguração da api keys pelo vercel

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ yarn-debug.log*
 yarn-error.log*
 
 # Ignorar environments em qualquer pasta
-**/environments/environment.ts
-**/environments/environment.development.ts
+# **/environments/environment.ts
+# **/environments/environment.development.ts
