fix(angular, package): Correção do arquivo package para correção de deploy

--- a/DocMeeting/angular.json
+++ b/DocMeeting/angular.json
@@ -17,6 +17,14 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "p-queue",
+              "decamelize",
+              "camelcase",
+              "ansi-styles",
+              "base64-js",
+              "semver"
+            ],
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
